se corrigio unos pequeños errores

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="sidebarPlaylist">
           <h2 class="sidebarPlaylist-title">Playlist de amigos</h2>
           <ul class="playlistFriends" id="listaDeAmigos">
-            <!-- <li class="playlistFriends-item">
+            <li class="playlistFriends-item">
               <a href="#">
                 <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
                 <span>
@@ -95,7 +95,7 @@
                 </span>
               </a>
             </li>
-            <li class="playlistFriends-item">
+            <!-- <li class="playlistFriends-item">
               <a href="#">
                 <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
                 <span>
@@ -167,7 +167,7 @@
           <div class="user">
             <p>
               <img src="src/images/covers/gorillaz.jpg" alt=""/>
-              <span>Leonidas Esteban</span>
+              <span>Aaron Fabricio Santa Cruz</span>
             </p>
           </div>
         </div>
