--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Platzi Video</title>
+  <meta name="description" content="Encuentra aqui las peliculas que mas te gusta. Dividido por categorias.">
+  <meta name="keywords" content="Peliculas, peliculas de terror, peliculas de accion, peliculas de animación, peliculas bolivia">
+  <meta name="author" content="Aaron Fabricio Santa Cruz Valdez">
+  <meta http-equiv="cache-control" content="no-cache"/>
+  <meta http-equiv="expires" content="6000"/>
+  <title>Full Pelis</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="src/css/home.css" />
   <link rel="stylesheet" href="src/css/modal.css" />
