--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     <div class="home-sidebar">
       <div class="sidebar">
         <div class="logo">
-          <figure class="logo-image">
-            <img src="src/images/platzi-video.png" alt="Platzi Video - la Plataforma de videos cheveres"/>
-          </figure>
+          <div class="logo-image">
+            <h3>Full <span>Pelis</span></h3>
+            
+          </div>
         </div>
         <div class="sidebarPlaylist">
           <h2 class="sidebarPlaylist-title">Mi Playlist <span class="btn warning">Escuchar Playlist</span> </h2>
