--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="author" content="Aaron Fabricio Santa Cruz Valdez">
   <meta http-equiv="cache-control" content="no-cache"/>
   <meta http-equiv="expires" content="6000"/>
+  <link rel="shortcut icon" href="src/images/indice.jpeg">
   <title>Full Pelis</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="src/css/home.css" />
