se quito meta viewport

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="cache-control" content="no-cache"/>
   <meta http-equiv="expires" content="6000"/>
   <link rel="shortcut icon" href="src/images/indice.jpeg">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
   <title>Full Pelis</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="src/css/home.css" />
